<resources>
    <string name="default_text">Empty</string>

    <!-- BottomNavigationMenu   -->
    <string name="item_search_text">Поиск</string>
    <string name="item_media_text">Медиатека</string>
    <string name="item_setting_text">Настройки</string>

    <!--  Main  -->
    <string name="app_name">Playlist Maker</string>
    <string name="main_btn_search">Поиск</string>
    <string name="main_btn_library">Медиатека</string>
    <string name="main_btn_settings">Настройки</string>

    <!--  Settings  -->
    <string name="settings_name_page">Настройки</string>
    <string name="settings_text_theme">Темная тема</string>
    <string name="settings_text_share">Поделиться приложением</string>
    <string name="settings_text_support">Написать в поддержку</string>
    <string name="settings_text_user_agreement">Пользовательское соглашение</string>
    <string name="student_email" translatable="false">ikonalona123@ya.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="course_link" translatable="false">https://practicum.yandex.ru/android-developer/?searchText=android&amp;from=catalog</string>
    <string name="course_user_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>

    <!--  Library  -->
    <string name="library_name_page">Медиатека</string>
    <string name="library_duration_music_text">Длительность</string>
    <string name="library_country_music_text">Страна</string>
    <string name="library_genre_music_text">Жанр</string>
    <string name="library_year_music_text">Год</string>
    <string name="library_album_music_text">Альбом</string>
    <string name="library_bottom_sheet_text">Добавить в плейлист</string>
    <string name="library_added_playlist_text">Добавлено в плейлист %s</string>
    <string name="library_not_added_playlist_text">Трек уже добавлен в плейлист %s</string>

    <!--  Search  -->
    <string name="search_name_page">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="network_error">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_empty">Ничего не нашлось</string>
    <string name="btn_refresh_activity">Обновить</string>
    <string name="text_search_history">Вы искали</string>
    <string name="btn_clear_search_history">Очистить историю</string>
    <string name="default_duration">00:30</string>
    <string name="default_full_duration">00:00</string>

    <!--  Media  -->
    <string name="media_name_page">Медиатека</string>
    <string name="media_name_tag_favorites">Избранные треки</string>
    <string name="media_text_error_favorites">Ваша медиатека пуста</string>
    <string name="media_name_tag_playlists">Плейлисты</string>
    <string name="media_text_error_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="media_btn_text_playlists">Новый плейлист</string>
    <plurals name="media_playlist_amount_songs">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="dialog_exit_playlist_title">Завершить создание плейлиста?</string>
    <string name="dialog_exit_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_exit_positive">Завершить</string>
    <string name="dialog_exit_negative">Отмена</string>

    <!--  Create playlist  -->
    <string name="new_playlist_page">Новый плейлист</string>
    <string name="hint_name_input">Название*</string>
    <string name="hint_description_input">Описание</string>
    <string name="create_playlist_button_text">Создать</string>
    <string name="content_description_image">Картинка для плейлиста</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>

</resources>
