<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">

    <TextView
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="?attr/colorOnSecondary" />

    <Button
        android:id="@+id/btn_search"
        style="@style/SecondaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/main_btn_search"
        app:icon="@drawable/ic_search"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/btn_library"
        style="@style/SecondaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/main_btn_library"
        app:icon="@drawable/ic_library"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/btn_settings"
        style="@style/SecondaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/main_btn_settings"
        app:icon="@drawable/ic_settings"
        tools:ignore="TextViewEdits" />
</LinearLayout>