<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_settings_to_main"
            style="@style/ImageButtonStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_settings_back_arrow" />

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/search_name_page" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/YP_Light_Gray">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/MyEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:src="@drawable/ic_clear_input"
            android:visibility="gone" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/searchHistoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textSearchHistory"
            style="@style/SearchHistoryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="20dp"
            android:text="@string/text_search_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSearchHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/clearSearchHistory"
            style="@style/SearchHistoryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:text="@string/btn_clear_search_history" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_network_error" />

        <TextView
            android:id="@+id/errorMessage"
            style="@style/ErrorTextStyle"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            tools:text="@string/network_error" />

        <Button
            android:id="@+id/btnRefreshNetwork"
            style="@style/RefreshNetworkButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:text="@string/btn_refresh_activity"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>