<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".media.ui.CreatePlaylistFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_settings_back_arrow"
        android:translationX="-10dp"
        app:layout_constraintStart_toStartOf="@+id/begin_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_playlist_text"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/new_playlist_page"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <ImageView
        android:id="@+id/playlist_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/image_dashed_border"
        android:contentDescription="@string/content_description_image"
        android:scaleType="centerInside"
        android:src="@drawable/ic_add_photo_playlist"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/begin_guideline"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input_layout"
        style="@style/CreatePlaylistEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/begin_guideline"
        app:layout_constraintTop_toBottomOf="@+id/playlist_image">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_input"
            android:paddingVertical="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_input_layout"
        style="@style/CreatePlaylistEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/begin_guideline"
        app:layout_constraintTop_toBottomOf="@+id/name_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description_input"
            android:paddingVertical="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_playlist_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_create_playlist_background"
        android:text="@string/create_playlist_button_text"
        android:textColor="@color/YP_White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/begin_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/begin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />


</androidx.constraintlayout.widget.ConstraintLayout>