<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="14dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:padding="16dp"
            android:src="@drawable/ic_settings_back_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/activity_name_page"
            android:textColor="@color/black"
            android:textSize="@dimen/main_size_title"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_text_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_size_text" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/settings_text_share"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_size_text" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_settings_share" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/settings_text_support"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_size_text" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_settings_support" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/settings_text_user_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_size_text" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_settings_arrow_forward" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>