<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fillViewport="true"
    tools:context=".library.ui.activity.LibraryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_info_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_info_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageButton
            android:id="@+id/btn_library_to_main"
            style="@style/ImageButtonStyle"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_settings_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/albumMusicImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_placeholder_312"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/btn_library_to_main" />

        <TextView
            android:id="@+id/nameMusicText"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start|end"
            android:maxLines="1"
            android:paddingTop="24dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/albumMusicImage"
            tools:text="Yesterday (Remastered 20099999999999999999999999999999999999999999)" />

        <TextView
            android:id="@+id/nameAuthorText"
            style="@style/nameGroupTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start|end"
            android:maxLines="1"
            android:paddingTop="12dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/nameMusicText"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/addPlayListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/playMusicButton"
            app:layout_constraintEnd_toStartOf="@+id/playMusicButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/playMusicButton"
            app:srcCompat="@drawable/ic_button_add_playlist" />

        <ImageButton
            android:id="@+id/playMusicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toStartOf="@+id/likeMusicButton"
            app:layout_constraintStart_toEndOf="@+id/addPlayListButton"
            app:layout_constraintTop_toBottomOf="@+id/nameAuthorText"
            app:srcCompat="@drawable/ic_button_start_song" />

        <ImageButton
            android:id="@+id/likeMusicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/playMusicButton"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toEndOf="@+id/playMusicButton"
            app:layout_constraintTop_toTopOf="@+id/playMusicButton"
            app:srcCompat="@drawable/ic_button_like_empty" />

        <TextView
            android:id="@+id/timeToPlayText"
            style="@style/TimeToPlayStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/default_duration"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/playMusicButton" />

        <TextView
            android:id="@+id/durationMusicName"
            style="@style/InformationMusicNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/library_duration_music_text"
            app:layout_constraintStart_toStartOf="@+id/left_info_guideline"
            app:layout_constraintTag="durationMusic"
            app:layout_constraintTop_toBottomOf="@+id/timeToPlayText" />

        <TextView
            android:id="@+id/durationMusicText"
            style="@style/InformationMusicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingTop="30dp"
            app:layout_constraintEnd_toStartOf="@+id/right_info_guideline"
            app:layout_constraintTop_toBottomOf="@+id/timeToPlayText"
            tools:text="5:35" />

        <TextView
            android:id="@+id/albumMusicName"
            style="@style/InformationMusicNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="17dp"
            android:text="@string/library_album_music_text"
            app:layout_constraintStart_toStartOf="@+id/left_info_guideline"
            app:layout_constraintTag="albumMusic"
            app:layout_constraintTop_toBottomOf="@+id/durationMusicName" />

        <TextView
            android:id="@+id/albumMusicText"
            style="@style/InformationMusicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:paddingTop="17dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/right_info_guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/namesBarrier"
            app:layout_constraintTag="albumMusicText"
            app:layout_constraintTop_toBottomOf="@+id/durationMusicText"
            tools:text="«2025 – The Ultimate Super Deluxe Limited Extended Collector's Edition (Remastered Expanded) [feat. Various Artists] | Part One: The Beginning of the End»" />

        <TextView
            android:id="@+id/yearMusicName"
            style="@style/InformationMusicNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="17dp"
            android:text="@string/library_year_music_text"
            app:layout_constraintStart_toStartOf="@+id/left_info_guideline"
            app:layout_constraintTag="yearMusic"
            app:layout_constraintTop_toBottomOf="@+id/albumMusicName" />

        <TextView
            android:id="@+id/yearMusicText"
            style="@style/InformationMusicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingTop="17dp"
            app:layout_constraintEnd_toStartOf="@+id/right_info_guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/namesBarrier"
            app:layout_constraintTag="yearMusicText"
            app:layout_constraintTop_toBottomOf="@+id/albumMusicText"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreMusicName"
            style="@style/InformationMusicNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="17dp"
            android:text="@string/library_genre_music_text"
            app:layout_constraintStart_toStartOf="@+id/left_info_guideline"
            app:layout_constraintTag="genreMusic"
            app:layout_constraintTop_toBottomOf="@+id/yearMusicName" />

        <TextView
            android:id="@+id/genreMusicText"
            style="@style/InformationMusicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingTop="17dp"
            app:layout_constraintEnd_toStartOf="@+id/right_info_guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/namesBarrier"
            app:layout_constraintTop_toBottomOf="@+id/yearMusicText"
            tools:text="Rock" />

        <TextView
            android:id="@+id/countyMusicName"
            style="@style/InformationMusicNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:paddingTop="17dp"
            android:text="@string/library_country_music_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/left_info_guideline"
            app:layout_constraintTag="countryMusic"
            app:layout_constraintTop_toBottomOf="@+id/genreMusicName" />

        <TextView
            android:id="@+id/countryMusicText"
            style="@style/InformationMusicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="end"
            android:paddingTop="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_info_guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/namesBarrier"
            app:layout_constraintTop_toBottomOf="@+id/genreMusicText"
            tools:text="Великобритания" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/namesBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="countryMusic, genreMusic, yearMusic, albumMusic, durationMusic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>